2008-09-24  Claudio Saavedra  <csaavedra@igalia.com>

	* src/hildon-wizard-dialog.c:

	(hildon_wizard_dialog_init): Update logical IDs and remove cancel
	button.
	(create_title): Update logical IDs and related code.
	(response): No need to handle HILDON_WIZARD_DIALOG_CANCEL.

	* src/hildon-wizard-dialog.h: Note that
	HILDON_WIZARD_DIALOG_CANCEL should be marked as deprecated at some
	point, as it is not used anymore.

	Fixes: NB#88887 (Hildon Wizard changes for Hildon2.2)

2008-09-24  Claudio Saavedra  <csaavedra@igalia.com>

	* src/hildon-note.c:
	(hildon_note_rebuild): Update logical IDs. Ensure "Cancel" button is
	shown.  Do not display an icon in confirmation notes nor information
	notes.
	(hildon_note_set_button_text): Update logical ID for cancel button.

	Fixes: NB#88850 (Update HildonNote button strings + signals)

2008-09-24  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-stackable-window.c
	(hildon_stackable_window_set_main_menu): Fix compilation warning.

2008-09-24  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-app-menu-private.h
	* src/hildon-app-menu.c (hildon_app_menu_set_columns)
	(hildon_app_menu_set_property, hildon_app_menu_construct_child)
	(hildon_app_menu_init, hildon_app_menu_class_init): Added
	temporary property 'columns' to change the number of columns.

2008-09-24  Claudio Saavedra  <csaavedra@igalia.com>

	Patch contributed by Kimmo Hämäläinen (kimmo.hamalainen@nokia.com)

	* examples/hildon-note-example.c: (on_information_clicked),
	(on_confirmation_clicked), (on_progress_clicked), (main): Add
	debugging information.
	* src/hildon-note-private.h: Remove close_if_pressed_outside,
	not needed anymore.
	* src/hildon-note.c: (hildon_note_class_init), (hildon_note_init),
	(hildon_note_rebuild): Remove special handling of tapping outside/inside
	in order to close: this will be handled by the WM from now on.

	Fixes: NB#88891 (Allow WM to handle properly close-on-tap-outside behavior)
